# catalog-service

./: BUILD.bazel  Dockerfile  MODULE.bazel  Taskfile.yaml  WORKSPACE  bazel-bin  bazel-catalog-service  bazel-out  bazel-testlogs  buf.gen.yaml  cloudbuild.yaml  go.mod  go.sum  go.work.sum  go_deps.bzl  main.go
.github/: dependabot.yaml
.github/workflows/: merge.yaml  pr.yaml  push.yaml
.trunk/: actions  logs  notifications  trunk.yaml
.trunk/plugins/: trunk
api/: buf.yaml
api/interceptors/: auth_interceptor.go  panic_interceptor.go
api/proto/: buf.yaml
api/ride/catalog/v1alpha1/: BUILD.bazel  catalog_service.pb.go  catalog_service.proto
api/ride/catalog/v1alpha1/catalogv1alpha1connect/: BUILD.bazel  catalog_service.connect.go
api/service/: create_entity.go  delete_entity.go  get_entity.go  list_entities.go  update_entity.go
cmd/api-server/: BUILD.bazel  main.go  wire.go  wire_gen.go
config/: BUILD.bazel  config.go
config/di/: wire.go  wire_gen.go
internal/api-handlers/: BUILD.bazel  get_catalog.go  get_route.go  search_places.go  service.go
internal/core/models/: BUILD.bazel  latlng.go  place.go
internal/repositories/maps/: BUILD.bazel  impl.go  interface.go  search_places.go
internal/repositories/places/: BUILD.bazel  impl.go  interface.go  search_places.go
repositories/entity/: entity_repository.go
utils/logger/: logger.go
