load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "api-handlers",
    srcs = [
        "get_catalog.go",
        "get_route.go",
        "search_places.go",
        "service.go",
    ],
    importpath = "github.com/ride-app/catalog-service/internal/api-handlers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/ride/catalog/v1alpha1",
        "//internal/core/models",
        "//internal/repositories/places",
        "@com_connectrpc_connect//:connect",
        "@com_github_aidarkhanov_nanoid//:nanoid",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@com_github_dragonfish_go_v2//pkg/logger",
        "@org_golang_google_genproto//googleapis/type/latlng",
    ],
)
