load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "catalogv1alpha1connect",
    srcs = ["catalog_service.connect.go"],
    importpath = "github.com/ride-app/catalog-service/api/ride/catalog/v1alpha1/catalogv1alpha1connect",
    visibility = ["//visibility:public"],
    deps = [
        "//api/ride/catalog/v1alpha1",
        "@com_connectrpc_connect//:connect",
    ],
)
